demos/deploy/gateway/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: intel-rh-inference-gateway
  labels:
    app.kubernetes.io/name: inference-gateway
    platform: intel-redhat
