demos/deploy/gateway/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: inference-gateway
  namespace: intel-rh-inference-gateway
  labels:
    app.kubernetes.io/name: inference-gateway
spec:
  selector:
    app.kubernetes.io/name: inference-gateway
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  type: ClusterIP
